# TVM-Solidity-Compiler

./: API.md  Cargo.toml  Changelog.md  README.md
.github/workflows/: release.yml
compiler/: CMakeLists.txt
compiler/cmake/: EthDependencies.cmake  EthPolicy.cmake  jsoncpp.cmake
compiler/liblangutil/: CMakeLists.txt  Scanner.cpp  Token.h
compiler/libsolc/: CMakeLists.txt
compiler/libsolidity/: CMakeLists.txt
compiler/libsolidity/analysis/: SyntaxChecker.cpp  SyntaxChecker.h  TypeChecker.cpp  ViewPureChecker.cpp
compiler/libsolidity/ast/: AST.cpp  AST.h  ASTJsonImporter.cpp  ASTVisitor.h  AST_accept.h  Types.cpp  Types.h
compiler/libsolidity/codegen/: DictOperations.cpp  DictOperations.hpp  PeepholeOptimizer.cpp  PeepholeOptimizer.hpp  SizeOptimizer.cpp  SizeOptimizer.hpp  StackOpcodeSquasher.cpp  StackOpcodeSquasher.hpp  StackOptimizer.cpp  StackOptimizer.hpp  TVM.cpp  TVM.hpp  TVMABI.cpp  TVMABI.hpp  TVMAnalyzer.cpp  TVMAnalyzer.hpp  TVMCommons.cpp  TVMCommons.hpp  TVMConstants.hpp  TVMContractCompiler.cpp  TVMContractCompiler.hpp  TVMExpressionCompiler.cpp  TVMExpressionCompiler.hpp  TVMFunctionCall.cpp  TVMFunctionCall.hpp  TVMFunctionCompiler.cpp  TVMFunctionCompiler.hpp  TVMInlineFunctionChecker.cpp  TVMInlineFunctionChecker.hpp  TVMPusher.cpp  TVMPusher.hpp  TVMSimulator.cpp  TVMSimulator.hpp  TVMStructCompiler.cpp  TVMStructCompiler.hpp  TVMTypeChecker.cpp  TVMTypeChecker.hpp  TvmAst.cpp  TvmAst.hpp  TvmAstVisitor.cpp  (+1 more)
compiler/libsolidity/interface/: CompilerStack.cpp
compiler/libsolidity/parsing/: Parser.cpp  Parser.h
compiler/libsolutil/: CMakeLists.txt
compiler/scripts/: install_boost_macos.sh  install_cmake.sh  install_deps.ps1  install_deps.sh
compiler/solc/: main.cpp
lib/: stdlib.sol  stdlib_sol.tvm
sold/: Cargo.toml  build.rs
sold/src/: abi_utils.rs  lib.rs  libsolc.rs  main.rs  printer.rs
sold/tests/: tests.rs
solidity-ton-samples/: README.md
solidity-ton-samples/abi-test/: README.md  build.ts  package.json
solidity-ton-samples/abi-test/auto-gen/: AbiTester.abi.json  (+1 more)
solidity-ton-samples/counter/: key.json
solidity-ton-samples/fungible-tokens/: README.md  build.ts  package.json
(+30 files in other folders)
