[package]
edition = '2021'
name = 'sold'
version = '0.79.0'

[[bin]]
name = 'sold'
path = 'src/main.rs'

[dependencies]
atty = '0.2'
hex = '0.3.2'
num-bigint = '0.4'
base64 = '0.13'
dunce = '1.0'
anyhow = '1.0'
once_cell = '1.19'
serde_json = { features = [ 'unbounded_depth' ], version = '1.0' }
strip-ansi-escapes = '0.2'
clap = { features = [ 'derive' ], version = '4.5' }
serde = { features = [ 'derive' ], version = '1.0' }
ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.8.5' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.22' }
ever_assembler = { features = [ 'gosh' ], git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.9.3' }

[build-dependencies]
cmake = '0.1'

[dev-dependencies]
assert_cmd = '2.0'
predicates = '3.1'

[lib]
name = 'sold_lib'
path = 'src/lib.rs'
